# mozio_challenge

./: Dockerfile  README.md  pyproject.toml  requirements.txt
constants/: constants.py
mozioapi/: __init__.py  mozioapi.py
tests/: test_mozioapi.py
