[tool.poetry]
name = "mozio-backend-challenge"
version = "0.1.0"
description = ""
authors = ["Lauris V <lavo.cg@gmail.com>"]
readme = "README.md"
packages = [{include = "mozioapi"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "2.2.2"
requests = "2.28.1"
pytest = "^7.2.1"
flask-limiter = "^3.3.1"
jsonschema = "^4.18.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
